# algo_trading_platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MOMENTUM_QUICKSTART.md  README.md  alembic.ini  backtest_example.py  consumer.py  docker-compose.yaml  dto.py  example.env  logger.py  models.py  producer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
clients/: bybit_async.py  dto.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.migrator
docker/base/: Dockerfile
docker/consumer/: Dockerfile
docker/producers/: Dockerfile.base  Dockerfile.trand
migrations/: env.py
migrations/versions/: 20250530093534_aacfc5fd4609_initial.py  20250809115352_b0f7a9fe5d77_.py  20250821164357_c1d8e2a9f3b8_add_manually_closed_field.py  20250821233041_d2e4f5a6b7c9_add_sell_price_field.py  20250822083226_674dd0dcf86a_populate_sell_price_for_existing_records.py  20251109075800_a1b2c3d4e5f6_create_backtest_result_table.py
requirements/: consumer.in  consumer.txt  core.in  core.txt  dev.in  dev.txt  migrator.in  migrator.txt  producer.in  producer.txt  scheduler.in  scheduler.txt
src/: configs.py  logger.py  models.py  scheduler.py
src/backtester/: __init__.py  main.py  schemas.py  uow.py
src/backtester/config/: __init__.py  settings.py
src/backtester/repositories/: __init__.py  backtest_repository.py
src/backtester/services/: __init__.py  backtest_service.py
src/consumer/: db.py  main.py  uow.py
src/consumer/config/: settings.py
src/consumer/repositories/: deal_repository.py
src/consumer/services/: __init__.py  position_manager.py  statistics.py  trading.py
src/core/: backtest.py  dto.py  enums.py
src/core/clients/: bybit_async.py  dto.py  interface.py
src/core/services/: __init__.py  order_processor.py
src/di/: config.py  database.py  exchange.py  momentum_config.py  momentum_producer_service.py  producer_exchange.py  producer_service.py  service.py
src/producers/: strategy.py
src/producers/momentum/: README.md  main.py  strategy.py
src/producers/momentum/config/: settings.py
src/producers/momentum/services/: producer_service.py
src/producers/trand/: main.py  strategy.py
src/producers/trand/config/: __init__.py  settings.py
src/producers/trand/services/: producer_service.py
strategies/: dto.py  trand.py
tests/: conftest.py  test_backtest.py  test_bybit_async_client.py  test_position_closure.py  test_position_manager_service_integration.py  test_statistics_service.py  test_trading_service.py  test_trading_service_integration.py  test_trading_service_open_guard.py  test_trand_strategy.py
tests/test_session_management/: test_session_cleanup.py
